--- a/templates/Customer/HomeFreal.html
+++ b/templates/Customer/HomeFreal.html
@@ -39,6 +39,9 @@
             <a href="#"><i class="fa-solid fa-house"></i>Home</a>
           </li>
           <li>
+            <a href="#"><i class="fa-regular fa-bookmark"></i>Storage</a>
+          </li>
+          <li>
             <a href="#"><i class="fa-solid fa-blog"></i>Blog</a>
           </li>
           <li>
@@ -46,6 +49,50 @@
           </li>
           <li>
             <a href="#"><i class="fa-regular fa-newspaper"></i>News feed <span class="new-listing">4 new </span></a>
+          </li>
+        </ul>
+      </div>
+      <div class="post-comment__line"></div>
+      <div class="upcoming-event">
+        <span>Upcoming event <strong class="new-event">12</strong></span>
+      </div>
+      <div class="event-navigation">
+        <ul>
+          <li>
+            <a href="#">
+              <div class="event-date">20<br />Dec</div>
+              <div class="event-details">
+                <span class="event-name">Picnic</span>
+                <span class="new-work">78k interested · 7.7k going</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="event-date">28<br />Jan</div>
+              <div class="event-details">
+                <span class="event-name">Explorative</span>
+                <span class="new-work">31k interested · 7.7k going</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="event-date">12<br />Feb</div>
+              <div class="event-details">
+                <span class="event-name">Climbing</span>
+                <span class="new-work">19k interested · 5.7k going</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="event-date">18<br />Mar</div>
+              <div class="event-details">
+                <span class="event-name">Cycling</span>
+                <span class="new-work">28k interested · 1.7k going</span>
+              </div>
+            </a>
           </li>
         </ul>
       </div>
@@ -185,7 +232,7 @@
                 <div class="dropdown-comment">
                   <a href="#" class="select-item">
                     <span>All comments</span>
-                    <i class="fa-solid fa-circle-chevron-down"></i>
+                    <i class="fa-solid fa-caret-down"></i>
                   </a>
                   <ul class="dropdown-menu__comment">
                     <li><a href="#">All Comments</a></li>
@@ -215,19 +262,40 @@
             </div>
           </section>
         </main>
-        <aside class="trending">
-          <h2>Today Trending</h2>
-          <ul>
-            <li>Figma maintenance</li>
-            <li>Blender Update</li>
-            <li>Slackoverflow server</li>
-            <li>Javascript new</li>
-          </ul>
-          <div class="suggested-community">
-            <h2>Suggested community</h2>
-            <button>Join community</button>
+        <div class="asider">
+          <div class="asider-notification">
+            <h2>
+              Today Notification <a href="#"><i class="fa-solid fa-caret-down"></i></a>
+            </h2>
+            <ul>
+              <li>
+                <div class="notificate-details">
+                  <span class="notificate-name">Figma maintenance <strong class="new-notificate">12 in hour</strong></span>
+                  <span class="new-detail">78k interested</span>
+                </div>
+              </li>
+              <li>
+                <div class="notificate-details">
+                  <span class="notificate-name">Figma maintenance <strong class="new-notificate">12 in hour</strong></span>
+                  <span class="new-detail">78k interested</span>
+                </div>
+              </li>
+              <li>
+                <div class="notificate-details">
+                  <span class="notificate-name">Figma maintenance <strong class="new-notificate">12 in hour</strong></span>
+                  <span class="new-detail">78k interested</span>
+                </div>
+              </li>
+              <li>
+                <div class="notificate-details">
+                  <span class="notificate-name">Figma maintenance <strong class="new-notificate">12 in hour</strong></span>
+                  <span class="new-detail">78k interested</span>
+                </div>
+              </li>
+            </ul>
+            <span class="see">See all</span>
           </div>
-          <div class="friends-list">
+          <div class="asider-friends">
             <h2>My friends</h2>
             <ul>
               <li>Ridwan Beler</li>
@@ -236,7 +304,7 @@
               <li>Gerrald Kocak</li>
             </ul>
           </div>
-        </aside>
+        </div>
       </div>
     </div>
     <script src="https://kit.fontawesome.com/99cbdec5b3.js" crossorigin="anonymous"></script>
